<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lHoehencalculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.delavega_schumacher.hoehenmesser.Hoehencalculator" >

    <Button
        android:id="@+id/btnDelete"
        android:text="@string/delete"
        android:layout_marginTop="395dp"
        android:layout_marginStart="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Button>

    <ImageView
        android:id="@+id/app_logo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pic1">
        </ImageView>

    <TextView
        android:id="@+id/tvAlphaCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:text="@string/alpha"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtAlphaCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvAlphaCalc"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/tvAlphaCalc"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/AlphaDefault" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvBetaCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvAlphaCalc"
        android:layout_marginTop="26dp"
        android:text="@string/beta"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtBetaCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvBetaCalc"
        android:layout_alignStart="@+id/txtAlphaCalc"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/BetaDefault" />

    <TextView
        android:id="@+id/tvACalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvBetaCalc"
        android:layout_below="@+id/tvBetaCalc"
        android:layout_marginTop="25dp"
        android:text="@string/a"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtACalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvACalc"
        android:layout_alignStart="@+id/txtBetaCalc"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/aDefault" />

    <TextView
        android:id="@+id/tvBCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvACalc"
        android:layout_marginTop="23dp"
        android:text="@string/b"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtBCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvBCalc"
        android:layout_alignEnd="@+id/txtACalc"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/bDefault" />




</RelativeLayout>