<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lHoehenMesser"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.delavega_schumacher.hoehenmesser.Hoehenmesser" >

<SurfaceView android:id="@+id/svCameraAngleView"
    	     android:layout_width="match_parent"
    	     android:layout_height="match_parent"/>   


    <!--<CustomView android:id="@+id/cvOrientationLine"
    	     android:layout_width="match_parent"
    	     android:layout_height="match_parent"/>       	      
-->

<Button
    android:id="@+id/btnSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/svCameraAngleView"
    android:layout_alignStart="@+id/tvAngleTwo"
    android:layout_alignEnd="@+id/svCameraAngleView"
    android:text="@string/save" />

<ImageView
        android:id="@+id/app_logo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_pic2">
</ImageView>

<TextView
    android:id="@+id/tvAlpha"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignStart="@+id/svCameraAngleView"
    android:layout_alignTop="@+id/svCameraAngleView"
    android:text="@string/alpha"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/tvAlphaValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignTop="@+id/svCameraAngleView"
    android:layout_toStartOf="@+id/btnSave"
    android:layout_toEndOf="@+id/tvAlpha"
    android:text="@string/AlphaDefault"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/tvAngleTwoValue"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/svCameraAngleView"
    android:layout_alignTop="@+id/svCameraAngleView"
    android:layout_toEndOf="@+id/tvAngleTwo"
    android:text="@string/AngleDefault"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<Button
    android:id="@+id/btnClearAngles"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/svCameraAngleView"
    android:layout_alignStart="@+id/svCameraAngleView"
    android:layout_toStartOf="@+id/btnSave"
    android:text="@string/clear" />

<TextView
    android:id="@+id/tvAngleTwo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/tvAngleTwoValue"
    android:layout_alignBottom="@+id/tvAngleTwoValue"
    android:layout_marginStart="75dp"
    android:layout_toEndOf="@+id/tvAlpha"
    android:text="@string/angle"
    android:textAppearance="?android:attr/textAppearanceLarge" />
  
</RelativeLayout>